--- a/ToDoWeb/Views/Label/Delete.cshtml
+++ b/ToDoWeb/Views/Label/Delete.cshtml
@@ -1,18 +1,18 @@
 ﻿@model Label
 
 <form method="post">
+    <input asp-for="Id" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Create Label</h2>
+            <h2 class="text-primary">Edit Label</h2>
         </div>
         <div class="mb-3 row p-1">
             <label asp-for="Name" class="p-0"></label>
-            <input asp-for="Name" class="form-control"/>
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <input asp-for="Name" disabled class="form-control" />
         </div>
         <div class="row p-1">
             <div class="col-6 col-md-2">
-                <button type="submit" class="btn btn-primary form-control">Create</button>
+                <button type="submit" class="btn btn-danger form-control">Delete</button>
             </div>
             <div class="col-6 col-md-2">
                 <a asp-controller="Label" asp-action="Index" class="btn btn-secondary border form-control">Back to Label</a>
@@ -20,10 +20,4 @@
         </div>
     </div>
 </form>
-
-@section Scripts {
-    @{
-        <partial name="_ValidationScriptsPartial" />
-    }
-}
 
