--- a/ToDoWeb/Views/Label/Index.cshtml
+++ b/ToDoWeb/Views/Label/Index.cshtml
@@ -15,16 +15,29 @@
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
-                <th>
+                <th width="60%">
                     Label Name
                 </th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
             @foreach (var label in Model)
             {
                 <tr>
-                    <td>@label.Name</td>
+                    <td>
+                        @label.Name
+                    </td>
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Label" asp-action="Edit" asp-route-id ="@label.Id" class="btn btn-primary mx-2">
+                                <i class="bi bi-pencil-square"></i>Edit
+                            </a>
+                            <a asp-controller="Label" asp-action="Delete" asp-route-id="@label.Id" class="btn btn-danger mx-2">
+                                <i class="bi bi-trash-fill"></i>Delete
+                            </a>
+                        </div>
+                    </td>
                 </tr>
             }
         </tbody>
