--- a/ToDoWeb/Views/Label/Edit.cshtml
+++ b/ToDoWeb/Views/Label/Edit.cshtml
@@ -1,26 +1,36 @@
 ﻿@model Label
 
-<form method="post">
-    <input asp-for="Id" hidden />
-    <div class="border p-3 mt-4">
-        <div class="row pb-2">
-            <h2 class="text-primary">Edit Label</h2>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="Name" class="p-0"></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
-        <div class="row p-1">
-            <div class="col-6 col-md-2">
-                <button type="submit" class="btn btn-primary form-control">Update</button>
-            </div>
-            <div class="col-6 col-md-2">
-                <a asp-controller="Label" asp-action="Index" class="btn btn-secondary border form-control">Back to Label</a>
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-white py-2">Edit Label</h2>
             </div>
         </div>
     </div>
-</form>
+    <div class="card-body p-4">
+        <form method="post">
+            <input asp-for="Id" hidden />
+            <div class="border p-3">
+                <div class="form-floating py-2 col-12">
+                    <input asp-for="Name" class="form-control border-0 shadow" />
+                    <label asp-for="Name" class="ms-2"></label>
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-6 col-md-2">
+                        <button type="submit" class="btn btn-primary form-control">Update</button>
+                    </div>
+                    <div class="col-6 col-md-2">
+                        <a asp-controller="Label" asp-action="Index" class="btn btn-secondary border form-control">Back to Label</a>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+
 
 @section Scripts {
     @{
