--- a/ToDoWeb/Views/Label/Index.cshtml
+++ b/ToDoWeb/Views/Label/Index.cshtml
@@ -1,45 +1,52 @@
 ﻿@model List<Label>
-<div class="container">
-    <div class="row pt-4 pb-3">
-        <div class="col-6">
-            <h2 class="text-primary">
-                Label List
-            </h2>
-        </div>
-        <div class="col-6 text-end">
-            <a asp-controller="Label" asp-action="Create" class="btn btn-primary">
-                <i class="bi bi-plus-circle"></i></i> Create New Label
-            </a>
+
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-white py-2">Label List</h2>
+            </div>
         </div>
     </div>
-    <table class="table table-bordered table-striped">
-        <thead>
-            <tr>
-                <th width="60%">
-                    Label Name
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var label in Model)
-            {
+    <div class="card-body p-4">
+        <div class="row pb-3">
+            <div class="col-6">
+            </div>
+            <div class="col-6 text-end">
+                <a asp-controller="Label" asp-action="Create" class="btn btn-primary">
+                    <i class="bi bi-plus-circle"></i></i> Create New Label
+                </a>
+            </div>
+        </div>
+        <table class="table table-bordered table-striped">
+            <thead>
                 <tr>
-                    <td>
-                        @label.Name
-                    </td>
-                    <td>
-                        <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Label" asp-action="Edit" asp-route-id ="@label.Id" class="btn btn-primary mx-2">
-                                <i class="bi bi-pencil-square"></i>Edit
-                            </a>
-                            <a asp-controller="Label" asp-action="Delete" asp-route-id="@label.Id" class="btn btn-danger mx-2">
-                                <i class="bi bi-trash-fill"></i>Delete
-                            </a>
-                        </div>
-                    </td>
+                    <th width="65%">
+                        Label Name
+                    </th>
+                    <th></th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var label in Model)
+                {
+                    <tr>
+                        <td>
+                            @label.Name
+                        </td>
+                        <td>
+                            <div class="w-75 btn-group" role="group">
+                                <a asp-controller="Label" asp-action="Edit" asp-route-id="@label.Id" class="btn btn-primary mx-2">
+                                    <i class="bi bi-pencil-square"></i> Edit
+                                </a>
+                                <a asp-controller="Label" asp-action="Delete" asp-route-id="@label.Id" class="btn btn-danger mx-2">
+                                    <i class="bi bi-trash-fill"></i> Delete
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
