--- a/ToDoWeb/Views/Shared/_Layout.cshtml
+++ b/ToDoWeb/Views/Shared/_Layout.cshtml
@@ -25,7 +25,10 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Label" asp-action="Index">Label</a>
+                            <a class="nav-link" asp-area="" asp-controller="Label" asp-action="Index">ToDo-Label</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="ToDoTask" asp-action="Index">ToDo-Task</a>
                         </li>
                     </ul>
                 </div>
