--- a/ToDoWeb/Views/ToDoTask/Index.cshtml
+++ b/ToDoWeb/Views/ToDoTask/Index.cshtml
@@ -24,6 +24,7 @@
                     <th>Title</th>
                     <th>Description</th>
                     <th>Due Date</th>
+                    <th>Label</th>
                     <th>Priority</th>
                     <th>Status</th>
                     <th>CreatedAt</th>
@@ -37,6 +38,7 @@
                         <td>@toDoTask.Title</td>
                         <td>@toDoTask.Description</td>
                         <td>@toDoTask.DueDate</td>
+                        <td>@toDoTask.Label.Name</td>
                         <td>@toDoTask.Priority</td>
                         <td>@toDoTask.Status</td>
                         <td>@toDoTask.CreatedAt</td>
