--- a/ToDoWeb/Views/ToDoTask/Index.cshtml
+++ b/ToDoWeb/Views/ToDoTask/Index.cshtml
@@ -18,7 +18,7 @@
                 </a>
             </div>
         </div>
-        <table class="table table-bordered table-striped">
+        <table id="tblData"  class="table table-bordered table-striped" style="width: 100%">
             <thead>
                 <tr>
                     <th>Title</th>
@@ -31,30 +31,10 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody>
-                @foreach (var toDoTask in Model)
-                {
-                    <tr>
-                        <td>@toDoTask.Title</td>
-                        <td>@toDoTask.Description</td>
-                        <td>@toDoTask.DueDate</td>
-                        <td>@toDoTask.Label.Name</td>
-                        <td>@toDoTask.Priority</td>
-                        <td>@toDoTask.Status</td>
-                        <td>@toDoTask.CreatedAt</td>
-                        <td>
-                            <div class="w-75 btn-group" role="group">
-                                <a asp-controller="ToDoTask" asp-action="Edit" asp-route-id="@toDoTask.Id" class="btn btn-primary mx-2">
-                                    <i class="bi bi-pencil-square"></i> Edit
-                                </a>
-                                <a asp-controller="ToDoTask" asp-action="Delete" asp-route-id="@toDoTask.Id" class="btn btn-danger mx-2">
-                                    <i class="bi bi-trash-fill"></i> Delete
-                                </a>
-                            </div>
-                        </td>
-                    </tr>
-                }
-            </tbody>
         </table>
     </div>
 </div>
+
+@section Scripts{
+    <script src="~/js/toDoTask.js"></script>
+}
