--- a/ToDoWeb/Views/Shared/_Layout.cshtml
+++ b/ToDoWeb/Views/Shared/_Layout.cshtml
@@ -44,9 +44,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer bg-primary text-muted">
+    <footer class="border-top footer bg-primary text-white">
         <div class="container text-center">
-            &copy; 2024 - <i class="bi bi-list-task"></i>ToDoWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; Md. Sajjat Hossen, 2024 - <i class="bi bi-list-task"></i>  ToDo List APP
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
