--- a/ToDoWeb/Views/ToDoTask/Index.cshtml
+++ b/ToDoWeb/Views/ToDoTask/Index.cshtml
@@ -11,6 +11,9 @@
     <div class="card-body p-4">
         <div class="row pb-3">
             <div class="col-6">
+                <a asp-controller="ToDoTask" asp-action="DeleteCompletedTask" class="btn btn-info">
+                    <i class="bi bi-eraser-fill"></i> Delete Completed Task
+                </a>
             </div>
             <div class="col-6 text-end">
                 <a asp-controller="ToDoTask" asp-action="Create" class="btn btn-primary">
