--- a/ToDoWeb/Views/ToDoTask/Index.cshtml
+++ b/ToDoWeb/Views/ToDoTask/Index.cshtml
@@ -21,23 +21,47 @@
                 </a>
             </div>
         </div>
-        <table id="tblData"  class="table table-bordered table-striped" style="width: 100%">
+        <table class="table table-bordered table-striped" style="width: 100%">
             <thead>
                 <tr>
-                    <th>Title</th>
-                    <th>Description</th>
-                    <th>Due Date</th>
-                    <th>Label</th>
-                    <th>Priority</th>
-                    <th>Status</th>
-                    <th>CreatedAt</th>
+                    <th width="10%">Title</th>
+                    <th width="25%">Description</th>
+                    <th width="10%">Due Date</th>
+                    <th width="5%">Label</th>
+                    <th width="5%">Priority</th>
+                    <th width="15%">Status</th>
+                    <th width="10%">CreatedAt</th>
                     <th></th>
                 </tr>
             </thead>
+            <tbody>
+                @foreach (var toDoTask in Model)
+                {
+                    <tr>
+                        <td>@toDoTask.Title</td>
+                        <td >@toDoTask.Description</td>
+                        <td>@toDoTask.DueDate</td>
+                        <td>@toDoTask.Label.Name</td>
+                        <td>@toDoTask.Priority</td>
+                        <td>@toDoTask.Status</td>
+                        <td>@toDoTask.CreatedAt</td>
+                        <td>
+                            <div class="w-75 btn-group" role="group">
+                                <a asp-controller="ToDoTask" asp-action="Complete" asp-route-id="@toDoTask.Id" class="btn btn-info mx-2">
+                                    <i class="bi bi-check2-circle"></i> Complete
+                                </a>
+                                <a asp-controller="ToDoTask" asp-action="Edit" asp-route-id="@toDoTask.Id" class="btn btn-primary mx-2">
+                                    <i class="bi bi-pencil-square"></i> Edit
+                                </a>
+                                <a asp-controller="ToDoTask" asp-action="Delete" asp-route-id="@toDoTask.Id" class="btn btn-danger mx-2">
+                                    <i class="bi bi-trash-fill"></i> Delete
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
         </table>
     </div>
 </div>
 
-@section Scripts{
-    <script src="~/js/toDoTask.js"></script>
-}
