--- a/ToDoWeb/Views/ToDoTask/Index.cshtml
+++ b/ToDoWeb/Views/ToDoTask/Index.cshtml
@@ -10,7 +10,7 @@
     </div>
     <div class="card-body p-4">
         <div class="mb-3">
-            <form method="post" asp-controller="ToDoTask" asp-action="Index">
+            <form method="post" asp-controller="ToDoTask" asp-action="Search">
                 <div class="row pb-3">
                     <div class="col-3">
                         <input name="queryTerm" class="form-control border-1" />
