--- a/ToDoWeb/Views/ToDoTask/Index.cshtml
+++ b/ToDoWeb/Views/ToDoTask/Index.cshtml
@@ -76,7 +76,7 @@
         </table>
         <div class="row mt-4">
             <div class="col-6">
-                Showing 41 to 51 of @Model.TotalTasks entries.
+                Showing @Model.StartTaskNumber to @Model.EndTaskNumber of @Model.TotalTasks entries.
             </div>
             <div class="col-6">
                 <nav aria-label="Page navigation example">
