--- a/ToDoWeb/Views/ToDoTask/Index.cshtml
+++ b/ToDoWeb/Views/ToDoTask/Index.cshtml
@@ -21,17 +21,40 @@
                 </a>
             </div>
         </div>
-        <div class="mb-3">
-            <form method="post" asp-controller="ToDoTask" asp-action="Index">
-                <div class="row pb-3 justify-content-end">
-                    <div class="col-3">
-                        <input name="queryTerm" class="form-control border-1" />
+        <div class="row mt-3">
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-2">
+                        <form id="pageSizeForm" method="get" asp-controller="ToDoTask" asp-action="Index">
+                            <div class="mb-3">
+                                <select id="pageSizeSelect" name="pageSize" class="form-select form-select-sm" aria-label=".form-select-sm example" onchange="this.form.submit()">
+                                    <option selected disabled>@Model.PageSize</option>
+                                    <option value="5">5</option>
+                                    <option value="10">10</option>
+                                    <option value="20">20</option>
+                                    <option value="25">25</option>
+                                </select>
+                            </div>
+                        </form>
                     </div>
-                    <div class="col-3 col-md-1">
-                        <button type="submit" class="btn btn-primary form-control">Search</button>
+                    <div class="col-6 p-1">
+                        entries per page
                     </div>
+                </div>
+
+            </div>
+            <div class="col-6">
+                <form method="post" asp-controller="ToDoTask" asp-action="Index">
+                    <div class=" row pb-3 justify-content-end">
+                        <div class="col-6">
+                            <input name="queryTerm" class="form-control border-1" />
+                        </div>
+                        <div class="col-2 p-1">
+                            Search
+                        </div>
                     </<div>
-            </form>
+                </form>
+            </div>
         </div>
         <table class="table table-bordered table-striped" style="width: 100%">
             <thead>
@@ -83,17 +106,17 @@
                     <ul class="pagination justify-content-end">
                         @if (Model.CurrentPage > 1)
                         {
-                            <li class="page-item"><a class="page-link" asp-controller="ToDoTask" asp-action="Index" asp-route-queryTerm="@Model.QueryTerm" asp-route-currentPage="@(Model.CurrentPage - 1)">Previous</a></li>
+                            <li class="page-item"><a class="page-link" asp-controller="ToDoTask" asp-action="Index" asp-route-queryTerm="@Model.QueryTerm" asp-route-pageSize="@Model.PageSize" asp-route-currentPage="@(Model.CurrentPage - 1)">Previous</a></li>
                         }
                         @for (int i = 1; i <= Model.TotalPages; ++i)
                         {
                             if (i == Model.CurrentPage)
                             {
-                                <li class="page-item active"><a class="page-link" asp-controller="ToDoTask" asp-action="Index" asp-route-queryTerm="@Model.QueryTerm" asp-route-currentPage="@i">@i</a></li>
+                                <li class="page-item active"><a class="page-link" asp-controller="ToDoTask" asp-action="Index" asp-route-queryTerm="@Model.QueryTerm" asp-route-pageSize="@Model.PageSize" asp-route-currentPage="@i">@i</a></li>
                             }
                             else
                             {
-                                <li class="page-item"><a class="page-link" asp-controller="ToDoTask" asp-action="Index" asp-route-queryTerm="@Model.QueryTerm" asp-route-currentPage="@i">@i</a></li>
+                                <li class="page-item"><a class="page-link" asp-controller="ToDoTask" asp-action="Index" asp-route-queryTerm="@Model.QueryTerm" asp-route-pageSize="@Model.PageSize" asp-route-currentPage="@i">@i</a></li>
                             }
                         }
                         @if (Model.CurrentPage < Model.TotalPages)
