--- a/ToDoWeb/Views/Shared/_Layout.cshtml
+++ b/ToDoWeb/Views/Shared/_Layout.cshtml
@@ -14,23 +14,30 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ToDoWeb</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ToDoListApp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav me-auto">
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Label" asp-action="Index">ToDo-Label</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="ToDoTask" asp-action="Index">ToDo-Task</a>
-                        </li>
+                        @if (User.IsInRole(SD.roleAdmin))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Label" asp-action="Index">ToDo-Label</a>
+                            </li>
+                        }
+                        @if (User.IsInRole(SD.roleUser))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="ToDoTask" asp-action="Index">ToDo-Task</a>
+                            </li>
+                        }
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
