--- a/ToDoWeb/Views/ToDoTask/Index.cshtml
+++ b/ToDoWeb/Views/ToDoTask/Index.cshtml
@@ -82,9 +82,10 @@
                         <td>@toDoTask.CreatedAt</td>
                         <td>
                             <div class="w-75 btn-group" role="group">
-                                <a asp-controller="ToDoTask" asp-action="Complete" asp-route-id="@toDoTask.Id" class="btn btn-info mx-2">
+                                <a asp-controller="ToDoTask" asp-action="Complete" asp-route-id="@toDoTask.Id" class="btn btn-info mx-2 @(toDoTask.Status == "Completed" ? "disabled" : "")">
                                     <i class="bi bi-check2-circle"></i> Complete
                                 </a>
+
                                 <a asp-controller="ToDoTask" asp-action="Edit" asp-route-id="@toDoTask.Id" class="btn btn-primary mx-2">
                                     <i class="bi bi-pencil-square"></i> Edit
                                 </a>
