--- a/ToDoWeb/Views/Label/Delete.cshtml
+++ b/ToDoWeb/Views/Label/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model Label
+﻿@using ToDo.DomainLayer.Models
+@model Label
 
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
