--- a/ToDoWeb/Views/ToDoTask/Delete.cshtml
+++ b/ToDoWeb/Views/ToDoTask/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model ToDoTask
+﻿@using ToDo.DomainLayer.Models
+@model ToDoTask
 
 <div class="card shadow border-0 my-4">
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
