--- a/ToDoWeb/Views/ToDoTask/Index.cshtml
+++ b/ToDoWeb/Views/ToDoTask/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model ToDoTaskViewModel
+﻿@using ToDo.DomainLayer.Models
+@model ToDoTaskViewModel
 
 <div class="card shadow border-0 my-4 mb-5">
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
