Registration bug fixed and add ToDoTask service layer

--- a/ToDoWeb/Views/_ViewImports.cshtml
+++ b/ToDoWeb/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using ToDo
 @using ToDo.Models
-@using ToDo.Utility
+@using ToDo.ServiceLayer
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
