--- a/ToDoWeb/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/ToDoWeb/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using ToDoWeb.Areas.Identity
 @using ToDoWeb.Areas.Identity.Pages
-@using ToDo.Utility
+@using ToDo.ServiceLayer
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
